# summitly

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADD_FEATURED_COLUMN.md  AI_ANALYSIS_FEATURE.md  AI_ANALYSIS_LOCATION_GUIDE.md  ALL_API_ENDPOINTS.md  APARTMENT_TYPE_3_CARD_OPTIMIZATION.md  APARTMENT_TYPE_UI_UX_TRANSFORMATION.md  API_DEPLOYMENT_GUIDE.md  API_FILTERING_IMPLEMENTATION.md  API_IMPLEMENTATION_VERIFICATION.md  API_MIGRATION_SUMMARY.md  API_SETUP_SUMMARY.md  API_V1_ENDPOINTS.md  ARCHITECTURE_DIAGRAM.md  AUTHENTICATION_SETUP.md  AUTH_FIXES.md  AWS_AMPLIFY_TROUBLESHOOTING.md  AWS_MIGRATION_GUIDE.md  BRAND_COLORS_IMPLEMENTATION.md  BUILD_COMPLETE_SUMMARY.md  BUY_RENT_PRECON_ROUTING.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  COMMERCIAL_AGENT_FIX.md  COMMERCIAL_FIX_QUICK_REF.md  COMMERCIAL_PRODUCTION_READY.md  COMMERCIAL_SEARCH_CRITICAL_FIXES.md  COMMERCIAL_SEARCH_FIX.md  COMMERCIAL_SEARCH_FIX_ONTARIO.md  COMMERCIAL_SEARCH_IMPROVEMENTS.md  COMMERCIAL_TEST_GUIDE.md  COMMERCIAL_UPDATE_SUMMARY.md  COMPACT_SEARCH_LAYOUT.md  COMPLETE_FIX_SUMMARY.md  COMPLETION_SUMMARY.txt  COMPREHENSIVE_FIELD_HANDLING_STRATEGY.md  CONDO_ASSISTANT_DOCUMENTATION.md  (+220 more)
Data/: combined_test_report.json  residential_search_test_results.json
Frontend/: test_gpt4_chatbot.html
app/: condo.py  condo_api.py  condo_assistant.py  conversation_enhancements.py  property_type_interpreter.py  voice_assistant_clean.py  voice_assistant_modular.py  voice_assistant_repliers.py  webhook_handler.py
config/: .env.example
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  QUICK_START.md  README.md  RESIDENTIAL_SEARCH_PIPELINE.md  repliers-map-polygon-fix-for-flutter-proxy.md
endpoints/: __init__.py  chat.py  multimodal.py
examples/: context_persistence_examples.py  resilience_layer_usage_examples.py
models/: __init__.py  schemas.py  valuation_models.py
prisma/: AGENT_SCHEMA_REFERENCE.md  PROPERTY_WATCHLIST_MIGRATION.md  migration.sql  migration_property_watchlist.sql  schema.prisma
requirements/: repliers_requirements.txt  requirements.prod.txt  requirements.simple.txt  requirements.txt
scripts/: ENV_SETUP_FOR_MIGRATION.md  IMAGE_MIGRATION_GUIDE.md  MIGRATE_ALL_DATA_GUIDE.md  README.md  check-images.ts  check-supabase-projects.ts  comprehensive_test_suite.py  demo_residential_search.py  dev.sh  fix-s3-permissions.ts  migrate-all-data.ts  migrate-images.ts  quick_test.py  retry-failed-images.ts  run.sh  s3-set-agent-images-public.js  setup_repliers.sh  start_all.sh  test-db-connection.js  test-supabase-project-images.ts  test_residential_nlp_validation.py  verify-s3-images.ts  verify_system_integration.py
services/: __init__.py  address_intent_detector.py  address_key_normalizer.py  ai_insights_service.py  atomic_transaction_manager.py  canadian_re_chatbot.py  chatbot_api.py  chatbot_formatter.py  chatbot_integration_example.py  chatbot_orchestrator.py  chatbot_valuation_integration.py  chatgpt_service.py  commercial_property_service.py  condo_property_service.py  config.py  confirmation_manager.py  confirmation_tokens.py  conversation_context_manager.py  conversation_state.py  copy_paste_integration.py  demo_active_listings.py  diagnose_repliers_api.py  enhanced_location_handler.py  enhanced_mls_service.py  estimates_service.py  example_valuation_workflow.py  fallback_images.py  find_valid_properties.py  geocoding_service.py  huggingface_service.py  hybrid_intent_classifier.py  input_validator.py  intent_classifier.py  intersection_detector.py  list_available_properties.py  listings_service.py  location_context_manager.py  location_extractor.py  location_validator.py  market_analysis_service.py  (+34 more)
src/: middleware.ts
test_results/: edge_case_test_results.json  test_summary_20260118_091203.txt  zoning_query_results.json
tests/: __init__.py  chatbot_test_report_20251231_175104.html  chatbot_test_report_20251231_185911.html  chatbot_test_results_20251231_175104.json  chatbot_test_results_20251231_185911.json  comprehensive_chatbot_test.py  conftest.py  test_address_integration.py  test_address_intent.py  test_address_key_normalization.py  test_address_search.py  test_any_listings.py  test_any_properties_fix.py  test_atomic_transaction_manager.py  test_available_listings.py  test_complete_valuation.py  test_confirmation_manager.py  test_context_api.py  test_endpoints.py  (+35 more)
(+1086 files in other folders)
