[metadata]
name = summitly-backend
version = 3.0.0
description = AI-powered Real Estate Chatbot with Summitly and Repliers Integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://summitly.ca
author = Development Team
author_email = dev@summitly.local
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    .eggs,
    *.egg-info

ignore =
    E203,
    W503,
    E501

[coverage:run]
source = app,services,endpoints,models,utils
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
